syntax = "proto3";

package jobworkerp.service;

import "jobworkerp/service/common.proto";
import "jobworkerp/data/tool.proto";

message FindToolRequest {
    bool exclude_runner = 1;
    bool exclude_worker = 2;
}

service ToolService {
  rpc FindList(FindToolRequest) returns (stream jobworkerp.data.ToolSpecs);
}
